--- a/test.html
+++ b/test.html
@@ -22,6 +22,6 @@
     <div id="greeting"></div>
   </div>
   <!--This is Java script option-->
-  <script src="/test/script.js"></script>
+  <script src="https://rth-exam.github.io/exam-test/test/script.js"></script>
 </body>
 </html>
