--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
   <!--Meta BAR-->
   <meta charset="UTF-8">
   <title>RTH Result Web App</title>
-  <link rel="stylesheet" href="/test/styles.css">
+  <link rel="stylesheet" href="https://rth-exam.github.io/exam-test/test/styles.css">
 </head>
 <body>
   <div class="container">
