--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
   <!--Meta BAR-->
   <meta charset="UTF-8">
   <title>RTH Result Web App</title>
-  <link rel="stylesheet" href="https://rth-exam.github.io/exam-test/test/styles.css">
+  <link rel="stylesheet" href="test/styles.css">
 </head>
 <body>
   <div class="container">
@@ -22,6 +22,6 @@
     <div id="greeting"></div>
   </div>
   <!--This is Java script option-->
-  <script src="https://rth-exam.github.io/exam-test/test/script.js"></script>
+  <script src="test/script.js"></script>
 </body>
 </html>
